fix(ui): exit